{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 206,
  "lineage": "7a769305-683b-144d-0752-816296fbc528",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "by_allocation_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:elastic-ip/eipalloc-078f47c7dc2ceaa06",
            "association_id": "eipassoc-0ec17473e128a7240",
            "domain": "vpc",
            "id": "eipalloc-078f47c7dc2ceaa06",
            "network_interface_id": "eni-0750350cb066dd161",
            "network_interface_owner_id": "216989097838",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-52-0-168-254.compute-1.amazonaws.com",
            "public_ip": "52.0.168.254",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:internet-gateway/igw-0f6854937898b145a",
            "id": "igw-0f6854937898b145a",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "tags": {
              "Name": "august-bootie-igw"
            },
            "tags_all": {
              "Name": "august-bootie-igw",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:loadbalancer/app/august-alb/347fdb19ce36349a",
            "arn_suffix": "app/august-alb/347fdb19ce36349a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "august-alb-993841828.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:216989097838:loadbalancer/app/august-alb/347fdb19ce36349a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "august-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-03281bada82d8c398"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045bf731eafcee65b"
              },
              {
                "subnet_id": "subnet-0b03236dbc892d9df"
              }
            ],
            "subnets": [
              "subnet-045bf731eafcee65b",
              "subnet-0b03236dbc892d9df"
            ],
            "tags_all": {
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:loadbalancer/app/august-alb/347fdb19ce36349a"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:listener/app/august-alb/347fdb19ce36349a/e7bd0994260a70b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:targetgroup/august-alb-tg/a9fce1be1551da63",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216989097838:listener/app/august-alb/347fdb19ce36349a/e7bd0994260a70b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:loadbalancer/app/august-alb/347fdb19ce36349a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:listener/app/august-alb/347fdb19ce36349a/e7bd0994260a70b7"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:targetgroup/august-alb-tg/a9fce1be1551da63",
            "arn_suffix": "targetgroup/august-alb-tg/a9fce1be1551da63",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 90,
                "matcher": "200-299",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216989097838:targetgroup/august-alb-tg/a9fce1be1551da63",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:216989097838:loadbalancer/app/august-alb/347fdb19ce36349a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "august-alb-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216989097838:targetgroup/august-alb-tg/a9fce1be1551da63"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078f47c7dc2ceaa06",
            "association_id": "eipassoc-0ec17473e128a7240",
            "connectivity_type": "public",
            "id": "nat-0ff624022122a4d98",
            "network_interface_id": "eni-0750350cb066dd161",
            "private_ip": "10.0.1.194",
            "public_ip": "52.0.168.254",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045bf731eafcee65b",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.main",
            "data.aws_eip.by_allocation_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6bdc14aaaf0b03d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ff624022122a4d98",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6bdc14aaaf0b03d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f6bdc14aaaf0b03d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_nat_gateway.example",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.main",
            "data.aws_eip.by_allocation_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:route-table/rtb-0f6bdc14aaaf0b03d",
            "id": "rtb-0f6bdc14aaaf0b03d",
            "owner_id": "216989097838",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff624022122a4d98",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "rtb-0f6bdc14aaaf0b03d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:route-table/rtb-07d413884ceb2d859",
            "id": "rtb-07d413884ceb2d859",
            "owner_id": "216989097838",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6854937898b145a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "rtb-07d413884ceb2d859",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc1063e72b6d3d50",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6bdc14aaaf0b03d",
            "subnet_id": "subnet-0354fc03629be29fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0b1b1cb574c9c14",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6bdc14aaaf0b03d",
            "subnet_id": "subnet-0448ac3dcc445ec68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bb66642ff62bdda",
            "region": "us-east-1",
            "route_table_id": "rtb-07d413884ceb2d859",
            "subnet_id": "subnet-045bf731eafcee65b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081fba0a1a73d66d3",
            "region": "us-east-1",
            "route_table_id": "rtb-07d413884ceb2d859",
            "subnet_id": "subnet-0b03236dbc892d9df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:security-group/sg-03281bada82d8c398",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03281bada82d8c398",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_security_group"
            },
            "tags_all": {
              "Name": "alb_security_group",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "sg-03281bada82d8c398",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:security-group/sg-017c7fc80749804cf",
            "description": "Allow inbound 8000 from ALB SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017c7fc80749804cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access ECS on port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03281bada82d8c398"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ecs-service-sg",
            "name_prefix": "",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-service-sg"
            },
            "tags_all": {
              "Name": "ecs-service-sg",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "sg-017c7fc80749804cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:security-group/sg-0cf5de3067a781154",
            "description": "Allow inbound PostgreSQL access from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf5de3067a781154",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017c7fc80749804cf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "sg-0cf5de3067a781154",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-0354fc03629be29fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0354fc03629be29fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-0354fc03629be29fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-0448ac3dcc445ec68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0448ac3dcc445ec68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-0448ac3dcc445ec68",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-045bf731eafcee65b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045bf731eafcee65b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-045bf731eafcee65b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-0b03236dbc892d9df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b03236dbc892d9df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-0b03236dbc892d9df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-08fdd6927732ad5da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fdd6927732ad5da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rds-subnet-1"
            },
            "tags_all": {
              "Name": "rds-subnet-1",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-08fdd6927732ad5da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-0688f9cb199963988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0688f9cb199963988",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rds-subnet-2"
            },
            "tags_all": {
              "Name": "rds-subnet-2",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            },
            "vpc_id": "vpc-0b8b60902036c9eb5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-0688f9cb199963988",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:vpc/vpc-0b8b60902036c9eb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a24ed9b3f73e0109",
            "default_route_table_id": "rtb-0f6b5e3f2f2b73654",
            "default_security_group_id": "sg-01f792e83ec12dc7f",
            "dhcp_options_id": "dopt-0523f609c7816125b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8b60902036c9eb5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f6b5e3f2f2b73654",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "tags": {
              "Name": "august-vpc-tf"
            },
            "tags_all": {
              "Name": "august-vpc-tf",
              "Terraform": "true",
              "organization": "livingdevops",
              "repo": "August-Terraform",
              "team": "august bootcamp"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}